# win-grpc-bench

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
docs/: bench.md  development.md
grpc_mt/: CMakeLists.txt  certificate.hpp  main.cpp
helloworld_proto/: CMakeLists.txt
hgz/: CMakeLists.txt
scenarios/: 1000bytes.json  100bytes.json  2bytes.json  500bytes.json  50bytes.json
scripts/: CMakeLists.txt  add_cert.ps1  all_scenarios_launcher.ps1  bench.ps1  bench_launcher.ps1  extract_ratio.ps1  new_cert.ps1  print_summary.ps1
tools/grpc_mt_cli/: CMakeLists.txt  main.cpp
win_grpc/: CMakeLists.txt  main.cpp  test.key  test.pem
